Bug 48086. Be sure to update XUL document's ID-to-element map when removing generated content. r=rjc